customtests/tests/expected/accesspath2.err
tests/accesspath2.scala:18: error: Field u1 cannot be written through a @readonly reference
	rp.u1.u1 = up  // should error
              ^
tests/accesspath2.scala:19: error: mutability mismatch:
 found   : accesspath2.this.PathObj @readonly(accesspath2.this.rp)
 required: accesspath2.this.PathObj(accesspath2.this.PathObj#u1)
	up.u1.u1 = rp  // should error
                   ^
tests/accesspath2.scala:20: error: mutability mismatch:
 found   : accesspath2.this.PathObj @readonly(accesspath2.this.rp)
 required: accesspath2.this.PathObj(accesspath2.this.PathObj#u1)
	mp.u1.u1 = rp  // should error
                   ^
tests/accesspath2.scala:21: error: Field u1 cannot be written through a @readonly reference
	rp.u1.u1 = rp  // should error
              ^
tests/accesspath2.scala:25: error: Field u1 cannot be written through a @readonly reference
	rp.m1.u1 = up  // should error
              ^
tests/accesspath2.scala:26: error: mutability mismatch:
 found   : accesspath2.this.PathObj @readonly(accesspath2.this.rp)
 required: accesspath2.this.PathObj(accesspath2.this.PathObj @mutable#u1)
	up.m1.u1 = rp  // should error
                   ^
tests/accesspath2.scala:27: error: mutability mismatch:
 found   : accesspath2.this.PathObj @readonly(accesspath2.this.rp)
 required: accesspath2.this.PathObj(accesspath2.this.PathObj @mutable#u1)
	mp.m1.u1 = rp  // should error
                   ^
tests/accesspath2.scala:28: error: Field u1 cannot be written through a @readonly reference
	rp.m1.u1 = rp  // should error
              ^
tests/accesspath2.scala:30: error: Field u1 cannot be written through a @readonly reference
	up.r1.u1 = up  // should error
              ^
tests/accesspath2.scala:31: error: Field u1 cannot be written through a @readonly reference
	mp.r1.u1 = up  // should error
              ^
tests/accesspath2.scala:32: error: Field u1 cannot be written through a @readonly reference
	rp.r1.u1 = up  // should error
              ^
tests/accesspath2.scala:33: error: Field u1 cannot be written through a @readonly reference
	up.r1.u1 = rp  // should error
              ^
tests/accesspath2.scala:34: error: Field u1 cannot be written through a @readonly reference
	mp.r1.u1 = rp  // should error
              ^
tests/accesspath2.scala:35: error: Field u1 cannot be written through a @readonly reference
	rp.r1.u1 = rp  // should error
              ^
14 errors found
